Initailization of django project

--- a/.gitignore
+++ b/.gitignore
@@ -156,5 +156,9 @@ Thumbs.db #thumbnail cache on Windows
 # profiling data
 .prof
 
+#virtual environment
+Lib
+Scripts
+Include
 
 # End of https://www.toptal.com/developers/gitignore/api/django
